syntax = "proto3";

package proto.services.hello.v1;

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
}

// The request message containing the user's name.
message SayHelloRequest {
  // The user's name
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  // The greeting
  string message = 1;
}